# libskybrush

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  codecov.yml
.github/workflows/: build.yml
etc/cmake/: CodeCoverage.cmake
include/skybrush/: basic_types.h  buffer.h  colors.h  control.h  decls.h  error.h  events.h  lights.h  memory.h  motion.h  poly.h  refcount.h  rth_plan.h  screenplay.h  skybrush.h  stats.h  time_axis.h  trajectory.h  utils.h  version.h  yaw_control.h
include/skybrush/formats/: binary.h
src/: CMakeLists.txt  buffer.c  control.c  crc32.c  error.c  memory.c  motion.c  parsing.c  parsing.h  poly.c  trajectory.c  utils.c  utils.h
src/conductor/: time_axis.c
src/events/: events.c
src/formats/: binary.c
src/lights/: bytecode_array.hpp  bytecode_player.h  bytecode_store.h  colors.c  commands.cpp  commands.h  edge_detector.h  error_handler.cpp  error_handler.h  errors.h  executor.cpp  executor.h  light_player_config.h  loop_stack.cpp  loop_stack.h  program.cpp  signal_source.h  transition.cpp  transition.h  trigger.cpp  trigger.h
src/rth_plan/: rth_plan.c
src/screenplay/: chapter.c  scene.c  screenplay.c  time_axis.c
src/tools/: CMakeLists.txt  takeoff_land_info.c
src/trajectory/: builder.c  builder.h  player.c  player.h  poly.c  segment.c  segment.h  stats.c  trajectory.c  trajectory.h  utils.c  utils.h
src/yaw_control/: yaw_control.c
test/: CMakeLists.txt  test_ap_crc32.c  test_binary_parser.c  test_bounding_box.c  test_buffer.c  test_chksum.c  test_colors.c  test_errors.c  test_interval.c  test_light_player.c  test_light_program.c  test_light_program_2.c  test_light_program_3.c  test_parsing.c  test_poly.c  test_rth_plan.c  test_trajectory.c  test_trajectory_builder.c  test_trajectory_player.c  test_trajectory_player_2.c  test_utils.c  test_yaw_control.c  test_yaw_player.c  utils.h
test/benchmarks/: CMakeLists.txt  bench.h  bench_get_duration.c  bench_get_end_position.c  bench_player.c  bench_stats.c  bench_takeoff_landing_time.c
test/fixtures/: forward_left_back.skyb  forward_left_back_no_lights.skyb  forward_left_back_truncated.skyb  forward_left_back_v2.skyb  forward_left_back_v2_invalid_chksum.skyb  hover_3m.skyb  hover_3m_with_rth_plan.skyb  light_program_with_wait_until_cmd.skyb  multiple_vertical_landing_segments.skyb  pyro_events.skyb  real_show.skyb  test.skyb  zero_scale.skyb
test/unit/: CMakeLists.txt  test_ap_crc32.c  test_binary_parser.c  test_bounding_box.c  test_buffer.c  test_chksum.c  test_colors.c  test_control.c  test_control_output.c  test_errors.c  test_event_list_player.c  test_events.c  test_interval.c  test_light_player.c  test_light_program.c  test_light_program_2.c  test_light_program_3.c  test_motion.c  test_parsing.c  test_poly.c  test_rth_plan.c  test_screenplay.c  test_screenplay_chapter.c  test_screenplay_scene.c  test_show_controller.c  test_time_axis.c  test_trajectory.c  test_trajectory_builder.c  test_trajectory_player.c  test_trajectory_player_2.c  test_trajectory_stats.c  test_utils.c  test_yaw_control.c  test_yaw_player.c  utils.h
